weapons and teleportation implemented